src/OpenCvSharpExtern/optflow.h

CVAPI(ExceptionStatus) optflow_Ptr_RLOFOpticalFlowParameter_delete(cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *obj)
{
    return cvTry([&] { delete obj; });
}
CVAPI(ExceptionStatus) optflow_Ptr_RLOFOpticalFlowParameter_get(
    cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *ptr, cv::optflow::RLOFOpticalFlowParameter **returnValue)
{
    return cvTry([&] { *returnValue = ptr->get(); });
}
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_create(cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> **returnValue)
{
    return cvTry([&] {
        *returnValue = new cv::Ptr<cv::optflow::RLOFOpticalFlowParameter>(cv::optflow::RLOFOpticalFlowParameter::create());
    });
}
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setUseMEstimator(cv::optflow::RLOFOpticalFlowParameter *obj, int val)
{
    return cvTry([&] { obj->setUseMEstimator(val != 0); });
}
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getSolverType(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getSolverType(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setSolverType(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setSolverType(static_cast<cv::optflow::SolverType>(value)); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getSupportRegionType(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getSupportRegionType(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setSupportRegionType(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setSupportRegionType(static_cast<cv::optflow::SupportRegionType>(value)); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getNormSigma0(cv::optflow::RLOFOpticalFlowParameter *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getNormSigma0(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setNormSigma0(cv::optflow::RLOFOpticalFlowParameter *obj, float value) { return cvTry([&] { obj->setNormSigma0(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getNormSigma1(cv::optflow::RLOFOpticalFlowParameter *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getNormSigma1(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setNormSigma1(cv::optflow::RLOFOpticalFlowParameter *obj, float value) { return cvTry([&] { obj->setNormSigma1(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getSmallWinSize(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getSmallWinSize(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setSmallWinSize(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setSmallWinSize(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getLargeWinSize(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getLargeWinSize(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setLargeWinSize(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setLargeWinSize(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getCrossSegmentationThreshold(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getCrossSegmentationThreshold(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setCrossSegmentationThreshold(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setCrossSegmentationThreshold(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getMaxLevel(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getMaxLevel(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setMaxLevel(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setMaxLevel(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getUseInitialFlow(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getUseInitialFlow() ? 1 : 0; }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setUseInitialFlow(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setUseInitialFlow(value != 0); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getUseIlluminationModel(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getUseIlluminationModel() ? 1 : 0; }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setUseIlluminationModel(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setUseIlluminationModel(value != 0); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getUseGlobalMotionPrior(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getUseGlobalMotionPrior() ? 1 : 0; }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setUseGlobalMotionPrior(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setUseGlobalMotionPrior(value != 0); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getMaxIteration(cv::optflow::RLOFOpticalFlowParameter *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getMaxIteration(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setMaxIteration(cv::optflow::RLOFOpticalFlowParameter *obj, int value) { return cvTry([&] { obj->setMaxIteration(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getMinEigenValue(cv::optflow::RLOFOpticalFlowParameter *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getMinEigenValue(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setMinEigenValue(cv::optflow::RLOFOpticalFlowParameter *obj, float value) { return cvTry([&] { obj->setMinEigenValue(value); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_getGlobalMotionRansacThreshold(cv::optflow::RLOFOpticalFlowParameter *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getGlobalMotionRansacThreshold(); }); }
CVAPI(ExceptionStatus) optflow_RLOFOpticalFlowParameter_setGlobalMotionRansacThreshold(cv::optflow::RLOFOpticalFlowParameter *obj, float value) { return cvTry([&] { obj->setGlobalMotionRansacThreshold(value); }); }
CVAPI(ExceptionStatus) optflow_Ptr_DenseRLOFOpticalFlow_delete(cv::Ptr<cv::optflow::DenseRLOFOpticalFlow> *obj)
{
    return cvTry([&] { delete obj; });
}
CVAPI(ExceptionStatus) optflow_Ptr_DenseRLOFOpticalFlow_get(
    cv::Ptr<cv::optflow::DenseRLOFOpticalFlow> *ptr, cv::optflow::DenseRLOFOpticalFlow **returnValue)
{
    return cvTry([&] { *returnValue = ptr->get(); });
}
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_create(
    cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *rlofParam,
    float forwardBackwardThreshold,
    interop::Size gridStep,
    int interpType,
    int epicK, float epicSigma, float epicLambda,
    int ricSPSize, int ricSLICType,
    int usePostProc, float fgsLambda, float fgsSigma,
    int useVariationalRefinement,
    cv::Ptr<cv::optflow::DenseRLOFOpticalFlow> **returnValue)
{
    return cvTry([&] {
        const cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> param =
            rlofParam ? *rlofParam : cv::Ptr<cv::optflow::RLOFOpticalFlowParameter>();
        *returnValue = new cv::Ptr<cv::optflow::DenseRLOFOpticalFlow>(
            cv::optflow::DenseRLOFOpticalFlow::create(
                param, forwardBackwardThreshold, cpp(gridStep),
                static_cast<cv::optflow::InterpolationType>(interpType),
                epicK, epicSigma, epicLambda, ricSPSize, ricSLICType,
                usePostProc != 0, fgsLambda, fgsSigma, useVariationalRefinement != 0));
    });
}
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getRLOFOpticalFlowParameter(
    cv::optflow::DenseRLOFOpticalFlow *obj, cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> **returnValue)
{
    return cvTry([&] { *returnValue = clone(obj->getRLOFOpticalFlowParameter()); });
}
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setRLOFOpticalFlowParameter(
    cv::optflow::DenseRLOFOpticalFlow *obj, cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *val)
{
    return cvTry([&] {
        obj->setRLOFOpticalFlowParameter(val ? *val : cv::Ptr<cv::optflow::RLOFOpticalFlowParameter>());
    });
}
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getForwardBackward(cv::optflow::DenseRLOFOpticalFlow *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getForwardBackward(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setForwardBackward(cv::optflow::DenseRLOFOpticalFlow *obj, float value) { return cvTry([&] { obj->setForwardBackward(value); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getGridStep(cv::optflow::DenseRLOFOpticalFlow *obj, interop::Size *returnValue) { return cvTry([&] { *returnValue = c(obj->getGridStep()); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setGridStep(cv::optflow::DenseRLOFOpticalFlow *obj, interop::Size value) { return cvTry([&] { obj->setGridStep(cpp(value)); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getInterpolation(cv::optflow::DenseRLOFOpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getInterpolation(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setInterpolation(cv::optflow::DenseRLOFOpticalFlow *obj, int value) { return cvTry([&] { obj->setInterpolation(static_cast<cv::optflow::InterpolationType>(value)); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getEPICK(cv::optflow::DenseRLOFOpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getEPICK(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setEPICK(cv::optflow::DenseRLOFOpticalFlow *obj, int value) { return cvTry([&] { obj->setEPICK(value); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getEPICSigma(cv::optflow::DenseRLOFOpticalFlow *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getEPICSigma(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setEPICSigma(cv::optflow::DenseRLOFOpticalFlow *obj, float value) { return cvTry([&] { obj->setEPICSigma(value); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getEPICLambda(cv::optflow::DenseRLOFOpticalFlow *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getEPICLambda(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setEPICLambda(cv::optflow::DenseRLOFOpticalFlow *obj, float value) { return cvTry([&] { obj->setEPICLambda(value); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getFgsLambda(cv::optflow::DenseRLOFOpticalFlow *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getFgsLambda(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setFgsLambda(cv::optflow::DenseRLOFOpticalFlow *obj, float value) { return cvTry([&] { obj->setFgsLambda(value); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getFgsSigma(cv::optflow::DenseRLOFOpticalFlow *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getFgsSigma(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setFgsSigma(cv::optflow::DenseRLOFOpticalFlow *obj, float value) { return cvTry([&] { obj->setFgsSigma(value); }); }